--- a/wrr/styles/styles.css
+++ b/wrr/styles/styles.css
@@ -2,6 +2,7 @@ body{
     grid-template-columns: 3;
     grid-template-rows: 6;
     background-color: rgb(229, 205, 189);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 img{
     margin: 20px;
@@ -21,4 +22,15 @@ h4{
 div{
     margin: 2px;
     padding: 2px;
+}
+header{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.home-title{
+    font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 3em;
+}
+.msg {
+    background-color: rgb(200, 172, 137);
+    line-height: 1.5em;
 }
